# sofle-overlay

./: .gitignore  README.md  package-lock.json  package.json
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: input_lang.rs  keycodes.rs  lib.rs  main.rs  vial.rs
