[package]
name = "sofle-overlay"
version = "0.1.0"
edition = "2024"

[lib]
name = "sofle_overlay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "sofle-overlay"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hidapi = "2"
log = "0.4"
env_logger = "0.11"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
